# docs/swagger.yaml
@@ -29,6 +29,19 @@ definitions:
     - contact_phone
     - ent_name
     type: object
+  service.SignupDto:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -46,15 +59,32 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
-  /login:
-    get:
-      description: get string by ID
+  /auth/signup:
+    post:
+      consumes:
+      - application/json
+      description: 用户注册
+      parameters:
+      - description: 用户注册参数
+        in: body
+        name: signupData
+        required: true
+        schema:
+          $ref: '#/definitions/service.SignupDto'
+      produces:
+      - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: string
-      summary: Show an account
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 用户注册
+      tags:
+      - auth
   /v1/ents:
     get:
       consumes:
