# internal/app/controller/auth_controller.go
@@ -2,32 +2,39 @@ package controller
 
 import (
 	"fmt"
-	"net/http"
+	"gin-ddd-example/internal/app/service"
+	"gin-ddd-example/pkg/errors/e"
+	"gin-ddd-example/pkg/response"
 
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary		Show an account
-// @Description	get string by ID
-// @Success		200	{string} key
-// @Router		/login [get]
-func Login(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "key", "status": 200})
+type AuthController struct {
+	authService service.AuthService
 }
 
-type SignupDto struct {
-	Email    string `form:"email" binding:"required,email"`
-	Password string `form:"password" validate:"required"`
+func NewAuthController(authService service.AuthService) *AuthController {
+	return &AuthController{authService}
 }
 
-func Signup(c *gin.Context) {
-	var signupDto SignupDto
-	if err := c.ShouldBind(&signupDto); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"message": fmt.Sprint(err)})
+// @Summary      用户注册
+// @Description  用户注册
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        signupData body service.SignupDto true "用户注册参数"
+// @Success      200  {object} response.Response
+// @Failure      400  {object} response.Response
+// @Router       /auth/signup [post]
+func (c *AuthController) Signup(ctx *gin.Context) {
+	var signupDto service.SignupDto
+	if err := ctx.ShouldBind(&signupDto); err != nil {
+		response.JSON(ctx, e.ValidateErr, fmt.Sprint(err))
 		return
 	}
-
-	// err =
-
-	c.JSON(http.StatusOK, gin.H{"message": "注册成功"})
+	err := c.authService.Signup(&signupDto)
+	if err != nil {
+		response.JSON(ctx, e.BadRequestErr, fmt.Sprint(err))
+	}
+	response.JSON(ctx, e.Success, "用户注册成功")
 }
